# office-person-detection-vit

./: .coverage.Innocent-Man-Pro.local.29899.XKSdPtfx  .coverage.Innocent-Man-Pro.local.50035.XNYmMpRx  .coverage.Innocent-Man-Pro.local.6113.XPiOeLGx  .coverage.MacBookPro.lan.74077.XnJlAdTx  .gitignore  .pr_description.md  .pre-commit-config.yaml  Makefile  PHASE3_USER_TASKS.md  README.md  calibration_result.json  config.yaml  config.yaml.disabled  coverage.json  dvc.yaml  latest_rusult.md  main.py  phase1.md  plan.md  pyproject.toml  requirements.txt  requirements_compliance_report.md  task.md  実装計画書.md
.cursor/plans/: -e411f0be-implementation-status.md  -e411f0be.plan.md
.cursor/rules/: config-management.mdc  coordinate-zone-processing.mdc  development-productivity.mdc  git-workflow.mdc  project-overview.mdc  python-coding-standards.mdc  testing-standards.mdc  timestamp-frame-sampling.mdc  vit-detection.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
config/: calibration_template.json  calibration_template.yaml
config.backup/: homography_20251029-171336.yaml  homography_20251121-193802.yaml  homography_20251121-193916.yaml
data/: correspondence_points_cam01.json.template  gt_tracks_auto.json  gt_tracks_auto.json.bak  gt_tracks_template.json  test_correspondence_points.json  test_ground_truth_tracks.json  test_predicted_tracks.json
data/yolo_dataset/: data.yaml
docs/: CLEANUP_SUMMARY.md  OSSリサーチ：パイプライン改善提案.md  OSSリポジトリ検索：動画処理パイプライン.md  QUICK_START.md  README.md  baseline_data_preparation.md  baseline_verification_guide.md  bugfix_and_coverage_report.md  ci_cd_improvements.md  ci_troubleshooting.md  floormap_integration.md  implementation_evaluation_report.md  improved_features_integration.md  improvement_proposal.md  ml_engineer_action_plan.md  output_cleanup_guide.md  output_organization_best_practices.md  output_organization_summary.md  output_organization_summary_final.md  output_structure_final.md  phase1-3_evaluation_report.md  phase1-3_execution_report.md  phase1-3_summary.md  phase3_detailed_verification.md  phase3_implementation_summary.md  phase3_summary.md  plan.md  recommendations_implementation_complete_report.md  sampling_optimization_summary.md  script_execution_results.md  task_followup_plan.md  test_coverage_improvement_report.md  test_evaluation_report_final.md  timelapse_optimization.md  timestamp_experiment_guide.md  timestamp_implementation_analysis.md  tracking_integration_report.md
docs/architecture/: floormap_integration.md  output_structure.md
docs/archive/: README.md  bugfix_and_coverage_report.md  ci_cd_improvements.md  ci_cd_summary.md  ci_troubleshooting.md  final_implementation_report.md  implementation_evaluation_report.md  implementation_status_report.md  implementation_verification_guide.md  improved_features_integration.md  ml_engineer_action_plan.md  phase1-3_complete.md  recommendations_implementation_complete_report.md  recommendations_implementation_report.md  script_execution_results.md  task_followup_plan.md  test_coverage_improvement_report.md  test_evaluation_report.md  test_evaluation_report_final.md  tracking_integration_report.md  visual_inspection_checklist.md
docs/guides/: calibration_tool_explanation.md  ocr_engines.md  (+11 more)
examples/: visualizer_usage.py
output/: latest  test_evaluation_report.json
schemas/: coordinate_transformations.schema.json  metadata.schema.json  pipeline_checkpoint.schema.json  summary.schema.json
scripts/: check_dependencies.py  cleanup_annotation_images.py  comprehensive_test.py  evaluate_baseline.py  evaluate_mot_metrics.py  evaluate_reprojection_error.py  evaluate_similarity_thresholds.py  generate_baseline_report.py  generate_gt_tracks.py  measure_performance.py  run_baseline.py  run_full_baseline.py  test_implementations.py  visualize_features.py
src/: __init__.py  aggregator.py  config_manager.py  coordinate_transformer.py  data_models.py  evaluation_module.py  floormap_visualizer.py  frame_sampler.py  gt_schedule.py  ocr_engines.py  timestamp_extractor.py  video_processor.py  visualizer.py  vit_detector.py  zone_classifier.py
tests/: conftest.py  test_aggregation_phase.py  test_aggregator.py  test_camera_calibrator.py  test_checkpoint_manager.py  test_cli_arguments.py  test_config_manager.py  test_coordinate_transformer.py  test_data_models.py  test_detection_phase.py  test_evaluation_module.py  test_export_utils.py  test_feature_extraction.py  test_feature_extractor.py  test_feature_visualizer.py  test_floormap_config.py  test_floormap_visualizer.py  test_frame_extraction_pipeline.py  test_frame_sampler.py  test_homography.py  test_image_utils.py  test_lens_distortion.py  test_lightweight_tracker.py  test_logging_utils.py  test_memory_utils.py  test_mot_metrics.py  test_ocr_engine.py  test_ocr_engines.py  test_orchestrator.py  test_output_manager.py  test_performance_monitor.py  test_preprocessing.py  test_pwa_transform.py  test_reprojection_error.py  test_roi_extractor.py  test_similarity.py  test_stats_utils.py  test_timestamp_extractor.py  test_timestamp_extractor_v2.py  test_timestamp_parser.py  (+17 more)
tools/: accuracy_benchmark.py  adaptive_transform.py  adjust_camera_params.py  advanced_calibration.py  advanced_preprocessing_tester.py  advanced_transform.py  analyze_correspondences.py  analyze_coverage.py  analyze_threshold.py  calibration_tool.py  camera_model_optimizer.py  camera_param_optimizer.py  cleanup_old_outputs.py  cleanup_output.py  coco_to_cvat_tracks.py  convert_coco_to_yolo.py  convert_mot_to_gold.py  convert_to_gold_gt.py  correspondence_analyzer.py  correspondence_collector.py  cvat_to_mot_gt.py  dagster_poc.py  detect_enhanced.py  detect_for_benchmark.py  detect_yolov8.py  edit_gt_tracks.py  estimate_from_image.py  example_pnp_data.json  export_reference_frame.py  extract_all_timestamps_100frames.py  failure_analyzer.py  fine_tuning_preprocessing.py  full_optimization.py  gx_validate.py  homography_calibrator.py  interactive_visualizer.py  log_analyzer.py  manual_pipeline.py  nonlinear_calibration.py  ocr_accuracy_evaluator.py  (+26 more)
(+308 files in other folders)
